# capslock-forge

./: .gitignore  Cargo.toml  README.md  README.zh-CN.md  build.rs  tray.rc
default_config/: capslock_forget_config.yaml  replace_text.ini
i18n/: config_comment.txt  i18n.ini
src/: config.rs  feature.rs  i18n.rs  main.rs  tray.rs  units.rs
src/config/: key_from_str.rs
