[package]
name = "capslock-forge"
version = "0.1.0"
edition = "2021"

[dependencies]
# or
# caps-shortcut = { git = "https://github.com/icinggslits/caps-shortcut.git" }
caps-shortcut = { path = "../caps-shortcut" }
# tray-icon = "0.19.0"
# image = "0.25.2"
# tao = "0.30"
serde = "1"
rust-ini = "0.21.1"
yaml-rust2 = "0.9.0"
serde_json = "1"
# egui = "0.29.1"
# eframe = "0.29"
tray-item = "0.10.0"
sys-locale = "0.3.1"
rdev = "0.5.3"
enigo = "0.2.1"
selection = "1.2.0"

[build-dependencies]
embed-resource = "2.5"